--- a/Portfolio.html
+++ b/Portfolio.html
@@ -106,7 +106,7 @@
         <section id="projects">
             <h2>Projects</h2>
             <div class="project">
-                <h3><a href = "/Portfolio_Projects/Customer-Churn-Analysis.html" target = "_blank">Predictive Analytics:</a> Predicting Customer Churn and Identifying Use Cases</h3>
+                <h3><a href = "https://eric-baumann.github.io/Portfolio/Portfolio_Projects/Customer-Churn-Analysis.html" target = "_blank">Predictive Analytics:</a> Predicting Customer Churn and Identifying Use Cases</h3>
                 <p>Description: Code walk-through of model that predicts whether a customer will cancel service, with applications to other problems and ways to apply the findings.</p>
                 <div class="skills">
                     <span>R Programming</span>
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="project">
-                <h3><a href = /"/Portfolio_Projects/Google_Capstone.html" target = "_blank">Sales Forecasting:</a> Transparent Time Series Analysis</h3>
+                <h3><a href = "https://eric-baumann.github.io/Portfolio/Portfolio_Projects/Google_Capstone.html" target = "_blank">Sales Forecasting:</a> Transparent Time Series Analysis</h3>
                 <p>Description: Fit and tested a multiplicative decomposition model, explaining the steps in technical and understandable terms.</p>
                 <div class="skills">
                     <span>SQL</span>
